--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,31 @@
-# dependencies
+# Dependencies
 node_modules/
-/.pnp
+.pnp
 .pnp.js
 
-# testing
-/coverage
+# Testing
+coverage/
 
-# next.js
-/.next/
-/out/
+# Next.js
+.next/
+out/
+build/
+dist/
 
-# production
-/build
-
-# misc
+# Misc
 .DS_Store
 *.pem
+.env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
-.env
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
-
 # IDE
 .idea/
 .vscode/
-
-# logs
-logs/
-*.log
