--- a/package.json
+++ b/package.json
@@ -13,23 +13,36 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-dropdown-menu": "2.0.6",
-    "@radix-ui/react-slot": "1.0.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@sentry/react": "7.86.0",
-    "@supabase/supabase-js": "2.39.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.39.8",
     "@tanstack/react-query": "5.14.2",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "emoji-mart": "^5.6.0",
     "geist": "^1.3.1",
     "langchain": "0.0.212",
-    "lucide-react": "0.294.0",
+    "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "next-themes": "^0.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.0",
     "socket.io-client": "4.7.2",
-    "tailwind-merge": "2.1.0",
-    "tailwindcss": "3.4.0",
+    "sonner": "^1.7.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "zod": "3.22.4",
     "zustand": "4.4.7"
@@ -44,7 +57,7 @@
     "@types/react-dom": "18.2.17",
     "@typescript-eslint/eslint-plugin": "6.14.0",
     "@typescript-eslint/parser": "6.14.0",
-    "autoprefixer": "10.4.16",
+    "autoprefixer": "^10.4.20",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "9.1.0",
@@ -52,7 +65,7 @@
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "lint-staged": "15.2.0",
-    "postcss": "8.4.32",
+    "postcss": "^8.4.49",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "0.5.9",
     "typescript": "5.3.3"
