--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
@@ -33,10 +34,10 @@
     "geist": "^1.3.1",
     "langchain": "0.0.212",
     "lucide-react": "^0.294.0",
-    "next": "14.0.4",
+    "next": "^15.1.4",
     "next-themes": "^0.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^9.0.3",
     "remark-gfm": "^4.0.0",
     "socket.io-client": "4.7.2",
@@ -49,25 +50,36 @@
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
-    "@testing-library/jest-dom": "6.1.5",
-    "@testing-library/react": "14.1.2",
-    "@types/jest": "29.5.11",
-    "@types/node": "20.10.4",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.4",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.17",
+    "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "6.14.0",
     "@typescript-eslint/parser": "6.14.0",
     "autoprefixer": "^10.4.20",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "9.1.0",
-    "husky": "8.0.3",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "lint-staged": "15.2.0",
+    "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.0",
     "postcss": "^8.4.49",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "0.5.9",
     "typescript": "5.3.3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{json,css,md}": [
+      "prettier --write"
+    ]
   }
 }
