--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,12 @@ yarn-error.log*
 # IDE
 .idea/
 .vscode/
+
+# Cache
+.cache/
+.npm/
+.eslintcache
+
+# Build artifacts
+public/sw.js
+public/workbox-*.js
