--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hotkeys-hook": "^4.6.1",
     "react-markdown": "^9.0.3",
     "remark-gfm": "^4.0.0",
     "socket.io-client": "4.7.2",
