--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "format": "prettier --write .",
     "test": "vitest",
     "prepare": "husky install",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "seed": "ts-node --project scripts/tsconfig.json scripts/seed.ts",
+    "cleanup": "ts-node --project scripts/tsconfig.json scripts/cleanup.ts",
+    "generate-embeddings": "ts-node --project scripts/tsconfig.json scripts/generate-embeddings.ts",
+    "generate-embeddings:resume": "ts-node --project scripts/tsconfig.json scripts/generate-embeddings.ts --resume"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@langchain/openai": "^0.3.17",
+    "@langchain/pinecone": "^0.1.3",
+    "@pinecone-database/pinecone": "^4.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,7 +35,6 @@
     "@sentry/react": "7.86.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.39.8",
     "@tanstack/react-query": "5.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -39,6 +45,7 @@
     "lucide-react": "^0.294.0",
     "next": "^15.1.4",
     "next-themes": "^0.4.4",
+    "openai": "^4.78.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.6.1",
@@ -53,12 +60,14 @@
     "zustand": "4.4.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@shadcn/ui": "^0.0.4",
+    "@supabase/supabase-js": "^2.47.12",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.11",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.17.12",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.17",
     "@types/testing-library__react": "^10.2.0",
@@ -66,6 +75,7 @@
     "@typescript-eslint/parser": "6.14.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.7",
     "eslint": "8.55.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "9.1.0",
@@ -75,7 +85,9 @@
     "postcss": "^8.4.49",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "0.5.9",
-    "typescript": "5.3.3",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.3.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^1.6.0"
   },
