--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
-    "@langchain/openai": "^0.3.17",
-    "@langchain/pinecone": "^0.1.3",
+    "@langchain/openai": "^0.0.14",
+    "@langchain/pinecone": "^0.0.3",
     "@pinecone-database/pinecone": "^4.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -41,11 +41,11 @@
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
     "geist": "^1.3.1",
-    "langchain": "0.0.212",
+    "langchain": "^0.1.9",
     "lucide-react": "^0.294.0",
     "next": "^15.1.4",
     "next-themes": "^0.4.4",
-    "openai": "^4.78.1",
+    "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.6.1",
@@ -56,7 +56,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "3.22.4",
+    "zod": "^3.22.4",
     "zustand": "4.4.7"
   },
   "devDependencies": {
