--- a/package.json
+++ b/package.json
@@ -15,44 +15,54 @@
     "seed": "ts-node --project scripts/tsconfig.json scripts/seed.ts",
     "cleanup": "ts-node --project scripts/tsconfig.json scripts/cleanup.ts",
     "generate-embeddings": "ts-node --project scripts/tsconfig.json scripts/generate-embeddings.ts",
-    "generate-embeddings:resume": "ts-node --project scripts/tsconfig.json scripts/generate-embeddings.ts --resume"
+    "generate-embeddings:resume": "ts-node --project scripts/tsconfig.json scripts/generate-embeddings.ts --resume",
+    "seed:custom": "ts-node --project scripts/tsconfig.json scripts/seed-custom.ts"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@langchain/core": "^0.3.30",
     "@langchain/openai": "^0.0.14",
     "@langchain/pinecone": "^0.0.3",
     "@pinecone-database/pinecone": "^4.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "2.0.6",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@sentry/react": "7.86.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@tanstack/react-query": "5.14.2",
+    "@types/react-virtualized-auto-sizer": "^1.0.4",
+    "@types/react-window": "^1.8.8",
+    "@types/react-window-infinite-loader": "^1.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
     "geist": "^1.3.1",
+    "idb": "^8.0.1",
     "langchain": "^0.1.9",
     "lucide-react": "^0.294.0",
     "next": "^15.1.4",
     "next-themes": "^0.4.4",
-    "openai": "^4.28.0",
+    "openai": "^4.79.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "^4.6.1",
     "react-markdown": "^9.0.3",
+    "react-virtualized-auto-sizer": "^1.0.25",
+    "react-window": "^1.8.11",
+    "react-window-infinite-loader": "^1.0.9",
     "remark-gfm": "^4.0.0",
     "socket.io-client": "4.7.2",
-    "sonner": "^1.7.1",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
@@ -62,7 +72,7 @@
   "devDependencies": {
     "@faker-js/faker": "^9.3.0",
     "@shadcn/ui": "^0.0.4",
-    "@supabase/supabase-js": "^2.47.12",
+    "@supabase/supabase-js": "^2.47.16",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
